Autocomplete to support distinguisher labels in case of shared preferred labels; fixes #1335
