# model/sparql/GenericSparql.php
@@ -919,9 +919,10 @@ EOF;
      * @param string $searchLang language code used for matching labels (null means any language)
      * @param string[] $props properties to target e.g. array('skos:prefLabel','skos:altLabel')
      * @param boolean $unique restrict results to unique concepts (default: false)
+     * @param string|null $distinguisher SPARQL property path from concept to distinguisher object in case of shared prefLabels
      * @return string sparql query
      */
-    protected function generateConceptSearchQueryInner($term, $lang, $searchLang, $props, $unique, $filterGraph)
+    protected function generateConceptSearchQueryInner($term, $lang, $searchLang, $props, $unique, $filterGraph, $distinguisher=null)
     {
         $valuesProp = $this->formatValues('?prop', $props);
         $textcond = $this->generateConceptSearchQueryCondition($term, $searchLang);
@@ -945,6 +946,17 @@ EOF;
           return $labelClause . " BIND(?label AS ?match)";
         }
 
+        // Only include distinguisher labels in case of a shared prefLabel
+        $distinguisherClause = $distinguisher ?
+            "OPTIONAL {\n" .
+            "  ?s skos:prefLabel ?label . ?s2 skos:prefLabel ?label . FILTER(?s2 != ?s)\n" .
+            "  ?s $distinguisher ?distinguisher.\n" .
+            "  OPTIONAL {\n" .
+            "    ?distinguisher skos:prefLabel ?distLabel .\n" .
+            "    FILTER (LANG(?distLabel) = LANG(?label))\n" .
+            "  }\n" .
+            "}" : "";
+
         /*
          * This query does some tricks to obtain a list of unique concepts.
          * From each match generated by the text index, a string such as
@@ -955,12 +967,12 @@ EOF;
          * the structure is unpacked to get back the original string. Phew!
          */
         $hitvar = $unique ? '(MIN(?matchstr) AS ?hit)' : '(?matchstr AS ?hit)';
-        $hitgroup = $unique ? 'GROUP BY ?s ?label ?notation' : '';
+        $hitgroup = $unique ? 'GROUP BY ?s ?label ?notation ?distinguisher ?distLabel' : '';
 
         $langClause = $this->generateLangClause($searchLang);
 
         $query = <<<EOQ
-   SELECT DISTINCT ?s ?label ?notation $hitvar
+   SELECT DISTINCT ?s ?label ?notation ?distinguisher ?distLabel $hitvar
    WHERE {
     $graphClause {
      { 
@@ -975,10 +987,12 @@ EOF;
      BIND(IF(langMatches(LANG(?match),'$lang'), ?pri, ?pri+1) AS ?npri)
      BIND(CONCAT(STR(?npri), LANG(?match), '@', STR(?match)) AS ?matchstr)
      OPTIONAL { ?s skos:notation ?notation }
+     $distinguisherClause
     }
     $filterGraph
    }
    $hitgroup
+   ORDER BY LCASE(?distLabel)
 EOQ;
         return $query;
     }
@@ -1036,6 +1050,9 @@ EOQ;
         //add notation into searchable data for the vocabularies which have been configured for it
         if ($vocabs) {
             $searchByNotation = false;
+            // Only search for distinguisher labels if single vocabulary search has been initialized and it is set
+            $distinguisher = count($vocabs) === 1 ? $vocabs[0]->getConfig()->getResultDistinguisher() : '';
+
             foreach ($vocabs as $vocab) {
                 if ($vocab->getConfig()->searchByNotation()) {
                     $searchByNotation = true;
@@ -1065,12 +1082,12 @@ EOQ;
   BIND(IF((?pri = "3" || ?pri = "4"), ?match, ?unbound) as ?alabel)
   BIND(IF((?pri = "7" || ?pri = "8"), ?match, ?unbound) as ?hlabel)
 EOQ;
-        $innerquery = $this->generateConceptSearchQueryInner($params->getSearchTerm(), $params->getLang(), $params->getSearchLang(), $props, $unique, $filterGraph);
+        $innerquery = $this->generateConceptSearchQueryInner($params->getSearchTerm(), $params->getLang(), $params->getSearchLang(), $props, $unique, $filterGraph, $distinguisher);
         if ($params->getSearchTerm() === '*' || $params->getSearchTerm() === '') {
           $labelpriority = '';
         }
         $query = <<<EOQ
-SELECT DISTINCT ?s ?label ?plabel ?alabel ?hlabel ?graph ?notation (GROUP_CONCAT(DISTINCT STR(?type);separator=' ') as ?types) $extravars 
+SELECT DISTINCT ?s ?label ?plabel ?alabel ?hlabel ?graph ?notation (GROUP_CONCAT(DISTINCT STR(?distcoal);separator='|||') as ?distLabels) (GROUP_CONCAT(DISTINCT STR(?type);separator=' ') as ?types) $extravars
 $fcl
 WHERE {
  $gcl {
@@ -1083,12 +1100,13 @@ WHERE {
    ?s a ?type .
    $extrafields $schemecond
   }
+  BIND(COALESCE(?distLabel,STR(?distinguisher)) AS ?distcoal)
   $filterDeprecated
  }
  $filterGraph
 }
 GROUP BY ?s ?match ?label ?plabel ?alabel ?hlabel ?notation ?graph
-ORDER BY LCASE(STR(?match)) LANG(?match) $orderextra
+ORDER BY LCASE(STR(?match)) LANG(?match) LCASE(STR(?distLabels)) $orderextra
 EOQ;
         return $query;
     }
@@ -1161,6 +1179,10 @@ EOQ;
 
         if (isset($row->notation)) {
             $hit['notation'] = $row->notation->getValue();
+        }
+
+        if (isset($row->distLabels)) {
+            $hit['distinguisherLabels'] = explode("|||", $row->distLabels->getValue());
         }
 
         if (isset($row->plabel)) {
