# resource/js/docready.js
@@ -685,6 +685,9 @@ $(function() { // DOCUMENT READY
               }
               if (toBeRemoved !== null) { item.type.splice(toBeRemoved, 1); }
             }
+            if (item.distinguisherLabels) {
+              item.distinguisherLabel = "*" + item.distinguisherLabels.join(",*") + (item.type ? "," : "");
+            }
             return item;
           }));
       }
@@ -702,8 +705,11 @@ $(function() { // DOCUMENT READY
     '{{# if matched }}<span>{{matched}}{{# if lang}} ({{lang}}){{/if}} = </span>{{/if}}',
     '{{# if replaced }}<span class="replaced">{{replaced}}{{# if lang}} ({{lang}}){{/if}} &rarr; </span>{{/if}}',
     '{{# if notation }}<span>{{notation}}</span>{{/if}}',
-    '<span>{{label}}{{# if lang}}{{# unless matched }}<span>({{lang}})</span>{{/unless}}{{/if}}</span>',
+    '<span>{{label}}{{# if lang}}{{# unless matched }}<span>({{lang}})</span>{{/unless}}{{/if}}{{# if distinguisherLabel }}<span class="distinguisher-marker">*</span>{{/if}}</span>',
+    '<span class="concept-extra">',
+    '{{# if distinguisherLabel }}<span class="concept-distinguisher">{{distinguisherLabel}}</span>{{/if}}',
     '{{# if typeLabel }}<span class="concept-type">{{typeLabel}}</span>{{/if}}',
+    '</span>',
     '</div>',
     '<div class="vocab">{{vocabLabel}}</div>',
     '</div>'
